--- a/docs/assets/css/custom.scss
+++ b/docs/assets/css/custom.scss
@@ -2,9 +2,14 @@
 ---
 
 @charset "utf-8";
-// Your custom css /scss here
 
-@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Charms:ital,wght@0,400;0,700&display=swap');
+
+h1, h2, h3, h4, h5, h6,
+.firstHeading,
+.chulapa-title {
+    font-family: 'Charms Slab', cursive !important;
+}
 
 strong {
   font-weight: 600;
