--- a/docs/assets/css/custom.scss
+++ b/docs/assets/css/custom.scss
@@ -4,11 +4,16 @@
 @charset "utf-8";
 
 @import url('https://fonts.googleapis.com/css2?family=Charms:ital,wght@0,400;0,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 h1, h2, h3, h4, h5, h6,
 .firstHeading,
 .chulapa-title {
-    font-family: 'Charms Slab', cursive !important;
+    font-family: 'Charms', cursive !important;
+}
+
+body {
+    font-family: 'EB Garamond', serif !important;
 }
 
 strong {
