--- a/docs/assets/css/custom.scss
+++ b/docs/assets/css/custom.scss
@@ -9,7 +9,7 @@
 h1, h2, h3, h4, h5, h6,
 .firstHeading,
 .chulapa-title {
-    font-family: 'Charms', cursive !important;
+    font-family: 'EB Garamond', serif !important;
 }
 
 body {
