--- a/docs/assets/css/custom.scss
+++ b/docs/assets/css/custom.scss
@@ -10,6 +10,7 @@ h1, h2, h3, h4, h5, h6,
 .firstHeading,
 .chulapa-title {
     font-family: 'EB Garamond', serif !important;
+    font-weight: 700;
 }
 
 body {
