--- a/docs/assets/css/custom.scss
+++ b/docs/assets/css/custom.scss
@@ -118,3 +118,7 @@ iframe {
 .text-center {
     text-align: center;
 }
+
+.mw-body, .chulapa-container {
+    background-color: #e8c28aff !important;
+}
