--- a/docs/assets/css/custom.scss
+++ b/docs/assets/css/custom.scss
@@ -16,6 +16,7 @@ h1, h2, h3, h4, h5, h6,
 body {
     font-family: 'EB Garamond', serif !important;
     text-align: justify;
+    background-color: #e8c28aff !important;
 }
 
 strong {
