--- a/docs/assets/css/custom.scss
+++ b/docs/assets/css/custom.scss
@@ -16,7 +16,7 @@ h1, h2, h3, h4, h5, h6,
 body {
     font-family: 'EB Garamond', serif !important;
     text-align: justify;
-    background-color: #f8f4e6 !important; /* Soft yellowish-beige */
+    background-color: #f8e7a9 !important; /* Soft yellowish-beige */
     color: #3a3a3a !important; /* Darker text for contrast */
 }
 
