--- a/docs/assets/css/custom.scss
+++ b/docs/assets/css/custom.scss
@@ -79,19 +79,13 @@ transform: rotate(180deg);
 }
 
 .chulapa-navbar {
-    background-image: url('https://www.transparenttextures.com/patterns/cream-paper.png') !important;
-    background-attachment: fixed !important;
-    background-color: #f8e7a9 !important;
+    background: #f8e7a9 url('https://www.transparenttextures.com/patterns/cream-paper.png') fixed !important;
+    font-family: "EB Garamond", serif !important;
 }
 
 /* Footer */
 .chulapa-footer {
-    background-image: url('https://www.transparenttextures.com/patterns/cream-paper.png') !important;
-    background-attachment: fixed !important;
-    background-color: #f8e7a9 !important;
-}
-
-.chulapa-navbar, .chulapa-footer {
+    background: #f8e7a9 url('https://www.transparenttextures.com/patterns/cream-paper.png') fixed !important;
     font-family: "EB Garamond", serif !important;
 }
 
