--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="footer-chulapa text-left mt-0 pt-5 pb-5">
+<footer class="footer-chulapa text-left mt-0 pt-5 pb-5" style="font-family: 'EB Garamond', serif">
     <div class="container">
         <div class="row">
             <div class="col-md-3">
