--- a/docs/assets/css/custom.scss
+++ b/docs/assets/css/custom.scss
@@ -97,6 +97,7 @@ transform: rotate(180deg);
 .footer-chulapa ol,
 .footer-chulapa li {
     font-family: 'EB Garamond', serif !important;
+    background: #f8e7a9 url('https://www.transparenttextures.com/patterns/cream-paper.png') fixed !important;
 }
 
 
