--- a/docs/assets/css/custom.scss
+++ b/docs/assets/css/custom.scss
@@ -66,7 +66,7 @@ transform: rotate(180deg);
 }
 
 .hero-chulapa-image .p-name {
-  font-family: 'Young Serig', serif;
+  font-family: 'Young Serif', serif;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
