--- a/docs/assets/css/custom.scss
+++ b/docs/assets/css/custom.scss
@@ -10,8 +10,8 @@
 h1, h2, h3, h4, h5, h6,
 .firstHeading,
 .chulapa-title {
-    font-family: 'EB Garamond', serif !important;
-    font-weight: 700;
+    font-family: 'Young Serif', serif !important;
+    font-weight: 400;
 }
 
 body {
@@ -67,6 +67,7 @@ transform: rotate(180deg);
 
 .hero-chulapa-image .p-name {
   font-family: 'Young Serif', serif;
+  font-weight: 400
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
